# ai-health-board

./: AGENTS.md  CLAUDE.md  README.md  deploy_pipecat_cloud.sh  human_todo.md  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini
ai_health_board/: __init__.py  api.py  attack_generator.py  attack_memory.py  compliance.py  config.py  content_validator.py  daily_rooms.py  embeddings.py  grader_agent.py  models.py  observability.py  pipecat_runner.py  redis_store.py  run_orchestrator.py  scenario_pipeline.py  self_improve.py  tavily_loader.py  tester_agent.py  tester_browserbase.py  tester_voice.py  wandb_inference.py  weave_scorers.py  weave_self_improve.py
data/: nccn_test_results.json  tavily_benchmark.json  tavily_hybrid_benchmark.json  tavily_multi_benchmark.json  tavily_search_quality.json  tavily_strategy_comparison.json
docs/: data-storage.md  plan_from_claude.md  prd.md
frontend/: package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
pipecat_cloud/: Dockerfile  README.md  app.py  pcc-deploy-intake.toml  pcc-deploy-refill.toml  requirements.txt
scripts/: benchmark_hybrid.py  benchmark_search_quality.py  benchmark_search_strategy.py  benchmark_tavily.py  benchmark_tavily_multi.py  demo_compliance_change.py  demo_improvement_loop.py  discover_guidelines.py  generate_test_traces.py  generate_tester_traces.py  improvement_status.py  run_browserbase_test.py  run_cloud_text_test.py  run_e2e_demo.py  run_e2e_inprocess.py  run_e2e_local.sh  run_full_test.py  run_improvement_cycle.py  run_local_text_test.py  run_scenario_agent.py  (+18 more)
(+68 files in other folders)
